prusti-tests/tests/parse/ui/predicate_fail-2.stderr
error: `predicate!` can only be used on function definitions. it supports no attributes.
  --> $DIR/predicate_fail-2.rs:17:5
   |
17 |     static FOO: usize = 0;
   |     ^^^^^^

error: `predicate!` can only be used on function definitions. it supports no attributes.
  --> $DIR/predicate_fail-2.rs:23:5
   |
23 |     #[pure]
   |     ^

error: `predicate!` can only be used on function definitions. it supports no attributes.
  --> $DIR/predicate_fail-2.rs:32:5
   |
32 |     #[trusted]
   |     ^

error: free function without a body
  --> $DIR/predicate_fail-2.rs:12:5
   |
12 |     fn result_is_one() -> bool;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^-
   |                               |
   |                               help: provide a definition for the function: `{ <body> }`

error: aborting due to 4 previous errors

